Bug 969356 - When mouse clicking on a top site tile, the watermark shifts r=jimm
UltraBlame original commit: 080f388799bbc149c7b9e714f3c696611d8afb1a

--- a/browser/metro/theme/browser.css
+++ b/browser/metro/theme/browser.css
@@ -1652,27 +1652,6 @@ newtab_button_width
 ;
 }
 #
-content
--
-viewport
-[
-startpage
-]
-.
-active
--
-tab
--
-notificationbox
-{
-padding
--
-bottom
-:
-toolbar_height
-;
-}
-#
 urlbar
 -
 autocomplete
